--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background-color: #fafafa;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: sans-serif;
   text-align: center;
   
 }
@@ -15,19 +15,28 @@ h2 {
 }
 article {
   margin: auto;
+  box-shadow: 13px 14px 31px -5px rgba(0,0,0,0.27);
 }
 .post {
   width: 70%;
-  border: 1px solid black;
   border-radius: 10px;
   background-color: white;
-  padding: 20px;
+  overflow: hidden;
+}
+
+.title {
+  background-color: rgb(100, 125, 238);
 }
 
 .title h1{
-  color: black;
+  color: white;
+  margin: 0;
+  padding: 5px;
+  font-size: 2em;
 }
 
 .content {
   text-align: left;
+  padding: 20px;
+  font-size: 1.2em;
 }
