--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background-color: beige;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
 
